--- a/speed_up_nn/hw_01/hw_01_distillation_task.ipynb
+++ b/speed_up_nn/hw_01/hw_01_distillation_task.ipynb
@@ -77,8 +77,8 @@
     "id": "OwdgHUS1wccb",
     "outputId": "0b396f3e-4628-4d77-eba4-f00fd5909e08",
     "ExecuteTime": {
-     "end_time": "2025-02-16T16:15:33.161223Z",
-     "start_time": "2025-02-16T16:15:30.201293Z"
+     "end_time": "2025-02-23T12:49:40.356456Z",
+     "start_time": "2025-02-23T12:49:34.414660Z"
     }
    },
    "source": "!pip install torch transformers datasets tensorboard pillow evaluate",
@@ -174,8 +174,8 @@
    "metadata": {
     "id": "QjHHo_eLpYMa",
     "ExecuteTime": {
-     "end_time": "2025-02-16T18:36:04.961690Z",
-     "start_time": "2025-02-16T18:36:03.298588Z"
+     "end_time": "2025-02-23T12:49:42.434735Z",
+     "start_time": "2025-02-23T12:49:40.358719Z"
     }
    },
    "source": [
@@ -211,15 +211,15 @@
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "metadata": {
     "id": "aXKfFbGmwccf",
     "ExecuteTime": {
-     "end_time": "2025-02-16T18:36:06.592573Z",
-     "start_time": "2025-02-16T18:36:06.590586Z"
+     "end_time": "2025-02-23T12:49:42.437333Z",
+     "start_time": "2025-02-23T12:49:42.435485Z"
     }
    },
    "source": [
@@ -227,30 +227,30 @@
     "save_dir = 'runs/distillation'"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "cell_type": "code",
    "metadata": {
     "id": "0wXrcr--wccg",
     "ExecuteTime": {
-     "end_time": "2025-02-16T18:36:12.992365Z",
-     "start_time": "2025-02-16T18:36:12.989489Z"
+     "end_time": "2025-02-23T12:49:42.440779Z",
+     "start_time": "2025-02-23T12:49:42.438422Z"
     }
    },
    "source": [
     "tb_writer = SummaryWriter(save_dir)"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "cell_type": "code",
    "metadata": {
     "id": "B8GpVF2Dpkvs",
     "ExecuteTime": {
-     "end_time": "2025-02-16T18:36:13.771542Z",
-     "start_time": "2025-02-16T18:36:13.767105Z"
+     "end_time": "2025-02-23T12:49:42.443270Z",
+     "start_time": "2025-02-23T12:49:42.441484Z"
     }
    },
    "source": [
@@ -262,7 +262,7 @@
     "label2id = {v: k for k, v in id2label.items()}"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -282,8 +282,8 @@
     "id": "DezHZJUSqIL_",
     "outputId": "909eb073-0ccf-4f29-8d7c-2076119ec480",
     "ExecuteTime": {
-     "end_time": "2025-02-16T18:36:17.802416Z",
-     "start_time": "2025-02-16T18:36:17.783994Z"
+     "end_time": "2025-02-23T12:49:42.456478Z",
+     "start_time": "2025-02-23T12:49:42.443829Z"
     }
    },
    "source": [
@@ -303,7 +303,7 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -323,8 +323,8 @@
     "id": "f9cYusOhwcck",
     "outputId": "984e0cb8-92da-4324-9681-25bc661d0e0c",
     "ExecuteTime": {
-     "end_time": "2025-02-16T18:36:26.101230Z",
-     "start_time": "2025-02-16T18:36:25.097051Z"
+     "end_time": "2025-02-23T12:49:43.526255Z",
+     "start_time": "2025-02-23T12:49:42.457154Z"
     }
    },
    "source": [
@@ -342,7 +342,7 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -362,8 +362,8 @@
     "id": "RBFZ4REuwccl",
     "outputId": "9f78796d-4c91-41cd-ad27-e63eb3e52f06",
     "ExecuteTime": {
-     "end_time": "2025-02-16T16:15:52.969826Z",
-     "start_time": "2025-02-16T16:15:37.291546Z"
+     "end_time": "2025-02-23T12:49:59.689102Z",
+     "start_time": "2025-02-23T12:49:43.527086Z"
     }
    },
    "source": [
@@ -422,8 +422,8 @@
     "id": "-9tyJ9kywccm",
     "outputId": "c123dcec-72a6-4a3a-be6b-15a861ab594d",
     "ExecuteTime": {
-     "end_time": "2025-02-16T16:15:52.974469Z",
-     "start_time": "2025-02-16T16:15:52.970610Z"
+     "end_time": "2025-02-23T12:49:59.694015Z",
+     "start_time": "2025-02-23T12:49:59.689933Z"
     }
    },
    "source": [
@@ -763,8 +763,8 @@
    "metadata": {
     "id": "hEXm29Aiwcco",
     "ExecuteTime": {
-     "end_time": "2025-02-16T18:36:34.096903Z",
-     "start_time": "2025-02-16T18:36:34.094128Z"
+     "end_time": "2025-02-23T12:49:59.698320Z",
+     "start_time": "2025-02-23T12:49:59.695813Z"
     }
    },
    "source": [
@@ -785,22 +785,22 @@
     "    return sum(p.numel() for p in model.parameters())"
    ],
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 10
   },
   {
    "cell_type": "code",
    "metadata": {
     "id": "gQJxdmRlwccp",
     "ExecuteTime": {
-     "end_time": "2025-02-16T18:36:35.473759Z",
-     "start_time": "2025-02-16T18:36:35.452072Z"
+     "end_time": "2025-02-23T12:49:59.724195Z",
+     "start_time": "2025-02-23T12:49:59.699201Z"
     }
    },
    "source": [
     "student_model = create_small_network(deepcopy(teacher_model))"
    ],
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 11
   },
   {
    "cell_type": "code",
@@ -811,8 +811,8 @@
     "id": "XnF-e40bwccp",
     "outputId": "6f10fc06-619c-47b3-88b6-26e55ad03f0e",
     "ExecuteTime": {
-     "end_time": "2025-02-16T16:15:52.997166Z",
-     "start_time": "2025-02-16T16:15:52.994291Z"
+     "end_time": "2025-02-23T12:49:59.729292Z",
+     "start_time": "2025-02-23T12:49:59.725163Z"
     }
    },
    "source": [
@@ -1026,8 +1026,8 @@
    "metadata": {
     "id": "vPahHGynwccq",
     "ExecuteTime": {
-     "end_time": "2025-02-16T18:36:40.913463Z",
-     "start_time": "2025-02-16T18:36:40.908260Z"
+     "end_time": "2025-02-23T12:49:59.733807Z",
+     "start_time": "2025-02-23T12:49:59.730164Z"
     }
    },
    "source": [
@@ -1049,7 +1049,7 @@
     "    # возможно, в ваших экспериментах захотите добавить что-то ещё"
    ],
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -1065,8 +1065,8 @@
    "metadata": {
     "id": "TFMkj8ODwccq",
     "ExecuteTime": {
-     "end_time": "2025-02-16T18:36:42.380104Z",
-     "start_time": "2025-02-16T18:36:42.375824Z"
+     "end_time": "2025-02-23T12:49:59.737138Z",
+     "start_time": "2025-02-23T12:49:59.734592Z"
     }
    },
    "source": [
@@ -1083,15 +1083,15 @@
     ")"
    ],
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 14
   },
   {
    "cell_type": "code",
    "metadata": {
     "id": "Q_T8ZKo0wccq",
     "ExecuteTime": {
-     "end_time": "2025-02-16T18:36:45.636198Z",
-     "start_time": "2025-02-16T18:36:45.625796Z"
+     "end_time": "2025-02-23T12:49:59.745969Z",
+     "start_time": "2025-02-23T12:49:59.737926Z"
     }
    },
    "source": [
@@ -1216,7 +1216,7 @@
     "            )\n"
    ],
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 15
   },
   {
    "cell_type": "markdown",
@@ -1241,8 +1241,8 @@
    "metadata": {
     "id": "83JFI54qwccr",
     "ExecuteTime": {
-     "end_time": "2025-02-16T18:37:06.215106Z",
-     "start_time": "2025-02-16T18:37:06.211797Z"
+     "end_time": "2025-02-23T12:49:59.749396Z",
+     "start_time": "2025-02-23T12:49:59.746784Z"
     }
    },
    "source": [
@@ -1252,10 +1252,10 @@
     "\n",
     "def calc_last_layer_loss(student_logits, teacher_logits, weight):\n",
     "    \"\"\"Считаем лосс между выходами учителя и ученика\"\"\"\n",
-    "    student_probs = F.softmax(student_logits, dim=-1)\n",
+    "    student_log_probs = F.log_softmax(student_logits, dim=-1)\n",
     "    teacher_probs = F.softmax(teacher_logits, dim=-1)\n",
     "    \n",
-    "    return kl_loss(student_probs, teacher_probs) * weight\n",
+    "    return kl_loss(student_log_probs, teacher_probs) * weight\n",
     "    \n",
     "\n",
     "# здесь пока не обращаем внимания, чуть позже её напишем\n",
@@ -1267,7 +1267,7 @@
     "    return None"
    ],
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
@@ -1312,8 +1312,8 @@
     "id": "dm4etSB3wccs",
     "outputId": "bd882c7a-6c86-4689-8aa3-5039404c0899",
     "ExecuteTime": {
-     "end_time": "2025-02-16T16:34:51.870408Z",
-     "start_time": "2025-02-16T16:15:53.013495Z"
+     "end_time": "2025-02-23T13:09:26.659075Z",
+     "start_time": "2025-02-23T12:49:59.750043Z"
     }
    },
    "source": [
@@ -1331,45 +1331,45 @@
      "text": [
       "  0%|          | 0/753 [00:00<?, ?it/s]/home/hflabs/anaconda3/envs/ds/lib/python3.8/site-packages/torch/nn/functional.py:2994: UserWarning: reduction: 'mean' divides the total loss by both the batch size and the support size.'batchmean' divides only by the batch size, and aligns with the KL div math definition.'mean' will be changed to behave the same as 'batchmean' in the next major release.\n",
       "  warnings.warn(\n",
-      "total loss: 0.030: 100%|██████████| 753/753 [06:05<00:00,  2.06it/s]\n"
+      "total loss: 0.056: 100%|██████████| 753/753 [06:25<00:00,  1.96it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean_iou: 0.9656628299483277\n",
-      "Mean accuracy: 0.9826144310576246\n"
+      "Mean_iou: 0.9650591913718443\n",
+      "Mean accuracy: 0.9822518274314547\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "total loss: 0.003: 100%|██████████| 753/753 [06:04<00:00,  2.06it/s] \n"
+      "total loss: 0.040: 100%|██████████| 753/753 [06:09<00:00,  2.04it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean_iou: 0.9708908495986013\n",
-      "Mean accuracy: 0.9852764725267529\n"
+      "Mean_iou: 0.9703191671695623\n",
+      "Mean accuracy: 0.9849564828792532\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "total loss: 0.010: 100%|██████████| 753/753 [06:04<00:00,  2.06it/s] \n"
+      "total loss: 0.025: 100%|██████████| 753/753 [06:08<00:00,  2.05it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean_iou: 0.9738003103706303\n",
-      "Mean accuracy: 0.9867802895588769\n"
+      "Mean_iou: 0.9728148192413426\n",
+      "Mean accuracy: 0.9862845489106884\n"
      ]
     }
    ],
@@ -1396,8 +1396,8 @@
    "metadata": {
     "id": "0uHQCGo8wcct",
     "ExecuteTime": {
-     "end_time": "2025-02-16T16:34:51.891972Z",
-     "start_time": "2025-02-16T16:34:51.871454Z"
+     "end_time": "2025-02-23T13:09:26.686529Z",
+     "start_time": "2025-02-23T13:09:26.660094Z"
     }
    },
    "source": [
@@ -1417,8 +1417,8 @@
     "id": "YONDzVI2wcct",
     "outputId": "ff2b6e4c-704f-4498-89eb-6c19f7ca27d9",
     "ExecuteTime": {
-     "end_time": "2025-02-16T16:34:51.895383Z",
-     "start_time": "2025-02-16T16:34:51.892728Z"
+     "end_time": "2025-02-23T13:09:26.690786Z",
+     "start_time": "2025-02-23T13:09:26.687491Z"
     }
    },
    "source": [
@@ -1443,8 +1443,8 @@
    "metadata": {
     "id": "RJ66hZ2gwcct",
     "ExecuteTime": {
-     "end_time": "2025-02-16T16:34:51.897655Z",
-     "start_time": "2025-02-16T16:34:51.896049Z"
+     "end_time": "2025-02-23T13:09:26.693428Z",
+     "start_time": "2025-02-23T13:09:26.691521Z"
     }
    },
    "source": [
@@ -1472,8 +1472,8 @@
    "metadata": {
     "id": "dCqjNM9Lwccu",
     "ExecuteTime": {
-     "end_time": "2025-02-16T18:37:15.100619Z",
-     "start_time": "2025-02-16T18:37:15.096794Z"
+     "end_time": "2025-02-23T13:09:26.696233Z",
+     "start_time": "2025-02-23T13:09:26.694258Z"
     }
    },
    "source": [
@@ -1485,7 +1485,7 @@
     "}"
    ],
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 21
   },
   {
    "cell_type": "markdown",
@@ -1502,8 +1502,8 @@
    "metadata": {
     "id": "_r-ljdRwwccv",
     "ExecuteTime": {
-     "end_time": "2025-02-16T18:37:21.761646Z",
-     "start_time": "2025-02-16T18:37:21.758656Z"
+     "end_time": "2025-02-23T13:09:26.699402Z",
+     "start_time": "2025-02-23T13:09:26.696958Z"
     }
    },
    "source": [
@@ -1513,15 +1513,16 @@
     "        student_attention_block = student_attentions[student_idx]\n",
     "        teacher_attention_block = teacher_attentions[teacher_idx]\n",
     "        \n",
-    "        student_probs = F.softmax(student_attention_block, dim=-1)\n",
-    "        teacher_probs = F.softmax(teacher_attention_block, dim=-1)\n",
+    "        # attention blocks already transfers due to softmax\n",
+    "        student_probs = torch.log(student_attention_block + 1e-9)\n",
+    "        teacher_probs = teacher_attention_block\n",
     "    \n",
     "        intermediate_kl_loss += kl_loss(student_probs, teacher_probs) * weights[student_idx]\n",
     "    \n",
     "    return intermediate_kl_loss"
    ],
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 22
   },
   {
    "cell_type": "markdown",
@@ -1541,8 +1542,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-16T18:37:36.104605Z",
-     "start_time": "2025-02-16T18:37:36.100576Z"
+     "end_time": "2025-02-23T13:09:26.702401Z",
+     "start_time": "2025-02-23T13:09:26.700228Z"
     }
    },
    "source": [
@@ -1559,7 +1560,7 @@
     "    return total_loss"
    ],
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 23
   },
   {
    "cell_type": "markdown",
@@ -1604,8 +1605,8 @@
     "id": "nammE-JCwccv",
     "outputId": "a5941805-b7d1-4193-8335-0876f1ab9a86",
     "ExecuteTime": {
-     "end_time": "2025-02-16T19:00:07.105627Z",
-     "start_time": "2025-02-16T18:37:39.016620Z"
+     "end_time": "2025-02-23T13:31:09.081236Z",
+     "start_time": "2025-02-23T13:09:26.703154Z"
     }
    },
    "source": [
@@ -1621,60 +1622,62 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/753 [00:00<?, ?it/s]/home/hflabs/anaconda3/envs/ds/lib/python3.8/site-packages/torch/nn/functional.py:2994: UserWarning: reduction: 'mean' divides the total loss by both the batch size and the support size.'batchmean' divides only by the batch size, and aligns with the KL div math definition.'mean' will be changed to behave the same as 'batchmean' in the next major release.\n",
-      "  warnings.warn(\n",
-      "total loss: 0.436: 100%|██████████| 753/753 [07:15<00:00,  1.73it/s]\n"
+      "total loss: 0.590: 100%|██████████| 753/753 [06:59<00:00,  1.79it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean_iou: 0.9625711462671409\n",
-      "Mean accuracy: 0.9809167455005361\n"
+      "Mean_iou: 0.9640998887801429\n",
+      "Mean accuracy: 0.9817036565529582\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "total loss: 0.547: 100%|██████████| 753/753 [07:14<00:00,  1.73it/s]\n"
+      "total loss: 0.401: 100%|██████████| 753/753 [06:59<00:00,  1.79it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean_iou: 0.9694527751280717\n",
-      "Mean accuracy: 0.9844763173830486\n"
+      "Mean_iou: 0.9721528853338317\n",
+      "Mean accuracy: 0.9859410932906933\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "total loss: 0.317: 100%|██████████| 753/753 [07:14<00:00,  1.73it/s]\n"
+      "total loss: 0.321: 100%|██████████| 753/753 [06:59<00:00,  1.79it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean_iou: 0.9744733730272652\n",
-      "Mean accuracy: 0.9871064091361789\n"
+      "Mean_iou: 0.9739775463995033\n",
+      "Mean accuracy: 0.9868635104058749\n"
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 24
   },
   {
    "cell_type": "code",
    "metadata": {
-    "id": "W-iV9xAewccv"
+    "id": "W-iV9xAewccv",
+    "ExecuteTime": {
+     "end_time": "2025-02-23T13:31:09.083981Z",
+     "start_time": "2025-02-23T13:31:09.082451Z"
+    }
    },
    "source": [],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 24
   },
   {
    "cell_type": "markdown",
