--- a/speed_up_nn/hw_02/hw_02_pruning_task.ipynb
+++ b/speed_up_nn/hw_02/hw_02_pruning_task.ipynb
@@ -1464,23 +1464,23 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-24T19:29:16.457493Z",
-     "start_time": "2025-02-24T19:29:16.455380Z"
+     "end_time": "2025-02-24T19:48:02.182883Z",
+     "start_time": "2025-02-24T19:48:02.178951Z"
     }
    },
    "source": [
     "# перенесите свой трейновый пайплайн из предыдущей домашки в отдельный файл и воспользуйтесь им\n",
-    "from utils.train import TrainParams, train"
+    "from speed_up_nn.hw_02.utils.train import train, TrainParams"
    ],
    "outputs": [],
-   "execution_count": 323
+   "execution_count": 367
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-24T19:29:16.929599Z",
-     "start_time": "2025-02-24T19:29:16.912394Z"
+     "end_time": "2025-02-24T19:48:03.789261Z",
+     "start_time": "2025-02-24T19:48:03.785146Z"
     }
    },
    "source": [
@@ -1494,38 +1494,44 @@
     "    loss_weight=0.5,\n",
     "    last_layer_loss_weight=0.5,\n",
     "    intermediate_layers_weights=(0.5, 0.5, 0.5, 0.5),\n",
+    "    intermediate_attn_layers_weights=(0.5, 0.5, 0.5, 0.5),\n",
+    "    intermediate_feat_layers_weights=(0.5, 0.5, 0.5, 0.5),\n",
     ")"
    ],
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "__init__() got an unexpected keyword argument 'temperature'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[324], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m train_params \u001B[38;5;241m=\u001B[39m \u001B[43mTrainParams\u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m      2\u001B[0m \u001B[43m    \u001B[49m\u001B[43mn_epochs\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m5\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[1;32m      3\u001B[0m \u001B[43m    \u001B[49m\u001B[43mlr\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m1e-4\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[1;32m      4\u001B[0m \u001B[43m    \u001B[49m\u001B[43mbatch_size\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m16\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[1;32m      5\u001B[0m \u001B[43m    \u001B[49m\u001B[43mn_workers\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m8\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[1;32m      6\u001B[0m \u001B[43m    \u001B[49m\u001B[43mdevice\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mtorch\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdevice\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mcuda\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;28;43;01mif\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[43mtorch\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcuda\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mis_available\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43;01melse\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mcpu\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m      7\u001B[0m \u001B[43m    \u001B[49m\u001B[43mtemperature\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m10.0\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[1;32m      8\u001B[0m \u001B[43m    \u001B[49m\u001B[43mloss_weight\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m0.5\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[1;32m      9\u001B[0m \u001B[43m    \u001B[49m\u001B[43mlast_layer_loss_weight\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m0.5\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[1;32m     10\u001B[0m \u001B[43m    \u001B[49m\u001B[43mintermediate_layers_weights\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m0.5\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m0.5\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m0.5\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m0.5\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m     11\u001B[0m \u001B[43m)\u001B[49m\n",
-      "\u001B[0;31mTypeError\u001B[0m: __init__() got an unexpected keyword argument 'temperature'"
-     ]
-    }
-   ],
-   "execution_count": 324
+   "outputs": [],
+   "execution_count": 368
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-24T19:48:05.486166Z",
+     "start_time": "2025-02-24T19:48:05.482162Z"
+    }
+   },
    "source": [
     "save_dir = 'runs/magnitude_equal_pruning'\n",
-    "tb_writer = SummaryWriter(save_dir)"
-   ]
+    "tb_writer = SummaryWriter(save_dir)\n",
+    "student_teacher_attention_mapping = {\n",
+    "    0: 0,\n",
+    "    1: 2,\n",
+    "    2: 4,\n",
+    "    3: 6,\n",
+    "}"
+   ],
+   "outputs": [],
+   "execution_count": 369
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2025-02-24T19:48:06.526146Z"
+    }
+   },
    "source": [
     "train(\n",
     "    teacher_model=baseline_model,\n",
@@ -1535,7 +1541,34 @@
     "    tb_writer=tb_writer,\n",
     "    save_dir=save_dir,\n",
     ")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/1129 [00:00<?, ?it/s]/home/hflabs/anaconda3/envs/ds/lib/python3.8/site-packages/torch/nn/functional.py:2994: UserWarning: reduction: 'mean' divides the total loss by both the batch size and the support size.'batchmean' divides only by the batch size, and aligns with the KL div math definition.'mean' will be changed to behave the same as 'batchmean' in the next major release.\n",
+      "  warnings.warn(\n",
+      "total loss: 0.533: 100%|██████████| 1129/1129 [06:47<00:00,  2.77it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean_iou: 0.9682966580429244\n",
+      "Mean accuracy: 0.9839645057372576\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "total loss: 0.383:  51%|█████     | 574/1129 [03:27<03:22,  2.75it/s]"
+     ]
+    }
+   ],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
