--- a/speed_up_nn/hw_03/deeplab_quantization_ready/quantization_hw_clean.ipynb
+++ b/speed_up_nn/hw_03/deeplab_quantization_ready/quantization_hw_clean.ipynb
@@ -1028,14 +1028,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "f83e30de-5a6a-45a2-bf7e-27b6ac3c9d4b",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-05T09:20:12.445404Z",
+     "start_time": "2025-03-05T09:20:10.425222Z"
+    }
+   },
    "source": [
     "# Точность модели fake quant и квантованной после конвертации будут разные\n",
-    "# Так и должно быть, всё таки мы эмулировали квантование."
-   ]
+    "# Так и должно быть, всё таки мы эмулировали квантование.\n",
+    "dummy_input = torch.randn(1, 3, 520, 520)\n",
+    "scripted_model = torch.jit.trace(int_qat_model, dummy_input, strict=False)\n",
+    "scripted_model.save(\"int_qat_model.pt\")"
+   ],
+   "outputs": [],
+   "execution_count": 27
   },
   {
    "cell_type": "markdown",
@@ -1053,12 +1061,206 @@
    ]
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-05T09:14:49.361411Z",
+     "start_time": "2025-03-05T09:14:49.263732Z"
+    }
+   },
    "cell_type": "code",
-   "execution_count": null,
-   "id": "df4f1a2f-76c2-48d5-ac99-040460da12a1",
-   "metadata": {},
+   "source": "int_qat_model",
+   "id": "b645cf9f14eb2033",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GraphModule(\n",
+       "  (backbone): Module(\n",
+       "    (conv1): QuantizedConvReLU2d(3, 64, kernel_size=(7, 7), stride=(2, 2), scale=0.031454846262931824, zero_point=0, padding=(3, 3))\n",
+       "    (maxpool): MaxPool2d(kernel_size=3, stride=2, padding=1, dilation=1, ceil_mode=False)\n",
+       "    (layer1): Module(\n",
+       "      (0): Module(\n",
+       "        (conv1): QuantizedConvReLU2d(64, 64, kernel_size=(1, 1), stride=(1, 1), scale=0.013712501153349876, zero_point=0)\n",
+       "        (conv2): QuantizedConvReLU2d(64, 64, kernel_size=(3, 3), stride=(1, 1), scale=0.01829022914171219, zero_point=0, padding=(1, 1))\n",
+       "        (conv3): QuantizedConv2d(64, 256, kernel_size=(1, 1), stride=(1, 1), scale=0.027659667655825615, zero_point=58)\n",
+       "        (downsample): Module(\n",
+       "          (0): QuantizedConv2d(64, 256, kernel_size=(1, 1), stride=(1, 1), scale=0.04986891150474548, zero_point=72)\n",
+       "        )\n",
+       "      )\n",
+       "      (1): Module(\n",
+       "        (conv1): QuantizedConvReLU2d(256, 64, kernel_size=(1, 1), stride=(1, 1), scale=0.013912894763052464, zero_point=0)\n",
+       "        (conv2): QuantizedConvReLU2d(64, 64, kernel_size=(3, 3), stride=(1, 1), scale=0.023724617436528206, zero_point=0, padding=(1, 1))\n",
+       "        (conv3): QuantizedConv2d(64, 256, kernel_size=(1, 1), stride=(1, 1), scale=0.02566472440958023, zero_point=63)\n",
+       "      )\n",
+       "      (2): Module(\n",
+       "        (conv1): QuantizedConvReLU2d(256, 64, kernel_size=(1, 1), stride=(1, 1), scale=0.01221059076488018, zero_point=0)\n",
+       "        (conv2): QuantizedConvReLU2d(64, 64, kernel_size=(3, 3), stride=(1, 1), scale=0.026861317455768585, zero_point=0, padding=(1, 1))\n",
+       "        (conv3): QuantizedConv2d(64, 256, kernel_size=(1, 1), stride=(1, 1), scale=0.035033706575632095, zero_point=68)\n",
+       "      )\n",
+       "    )\n",
+       "    (layer2): Module(\n",
+       "      (0): Module(\n",
+       "        (conv1): QuantizedConvReLU2d(256, 128, kernel_size=(1, 1), stride=(1, 1), scale=0.01845330372452736, zero_point=0)\n",
+       "        (conv2): QuantizedConvReLU2d(128, 128, kernel_size=(3, 3), stride=(2, 2), scale=0.012704610824584961, zero_point=0, padding=(1, 1))\n",
+       "        (conv3): QuantizedConv2d(128, 512, kernel_size=(1, 1), stride=(1, 1), scale=0.03674319386482239, zero_point=56)\n",
+       "        (downsample): Module(\n",
+       "          (0): QuantizedConv2d(256, 512, kernel_size=(1, 1), stride=(2, 2), scale=0.031645212322473526, zero_point=58)\n",
+       "        )\n",
+       "      )\n",
+       "      (1): Module(\n",
+       "        (conv1): QuantizedConvReLU2d(512, 128, kernel_size=(1, 1), stride=(1, 1), scale=0.008187312632799149, zero_point=0)\n",
+       "        (conv2): QuantizedConvReLU2d(128, 128, kernel_size=(3, 3), stride=(1, 1), scale=0.012618383392691612, zero_point=0, padding=(1, 1))\n",
+       "        (conv3): QuantizedConv2d(128, 512, kernel_size=(1, 1), stride=(1, 1), scale=0.032962288707494736, zero_point=66)\n",
+       "      )\n",
+       "      (2): Module(\n",
+       "        (conv1): QuantizedConvReLU2d(512, 128, kernel_size=(1, 1), stride=(1, 1), scale=0.010478830896317959, zero_point=0)\n",
+       "        (conv2): QuantizedConvReLU2d(128, 128, kernel_size=(3, 3), stride=(1, 1), scale=0.009127989411354065, zero_point=0, padding=(1, 1))\n",
+       "        (conv3): QuantizedConv2d(128, 512, kernel_size=(1, 1), stride=(1, 1), scale=0.022160230204463005, zero_point=64)\n",
+       "      )\n",
+       "      (3): Module(\n",
+       "        (conv1): QuantizedConvReLU2d(512, 128, kernel_size=(1, 1), stride=(1, 1), scale=0.012276641093194485, zero_point=0)\n",
+       "        (conv2): QuantizedConvReLU2d(128, 128, kernel_size=(3, 3), stride=(1, 1), scale=0.011988113634288311, zero_point=0, padding=(1, 1))\n",
+       "        (conv3): QuantizedConv2d(128, 512, kernel_size=(1, 1), stride=(1, 1), scale=0.026722967624664307, zero_point=63)\n",
+       "      )\n",
+       "    )\n",
+       "    (layer3): Module(\n",
+       "      (0): Module(\n",
+       "        (conv1): QuantizedConvReLU2d(512, 256, kernel_size=(1, 1), stride=(1, 1), scale=0.016940690577030182, zero_point=0)\n",
+       "        (conv2): QuantizedConvReLU2d(256, 256, kernel_size=(3, 3), stride=(1, 1), scale=0.013101470656692982, zero_point=0, padding=(1, 1))\n",
+       "        (conv3): QuantizedConv2d(256, 1024, kernel_size=(1, 1), stride=(1, 1), scale=0.036710482090711594, zero_point=63)\n",
+       "        (downsample): Module(\n",
+       "          (0): QuantizedConv2d(512, 1024, kernel_size=(1, 1), stride=(1, 1), scale=0.027277976274490356, zero_point=65)\n",
+       "        )\n",
+       "      )\n",
+       "      (1): Module(\n",
+       "        (conv1): QuantizedConvReLU2d(1024, 256, kernel_size=(1, 1), stride=(1, 1), scale=0.018250565975904465, zero_point=0)\n",
+       "        (conv2): QuantizedConvReLU2d(256, 256, kernel_size=(3, 3), stride=(1, 1), scale=0.016062496230006218, zero_point=0, padding=(2, 2), dilation=(2, 2))\n",
+       "        (conv3): QuantizedConv2d(256, 1024, kernel_size=(1, 1), stride=(1, 1), scale=0.03903035447001457, zero_point=74)\n",
+       "      )\n",
+       "      (2): Module(\n",
+       "        (conv1): QuantizedConvReLU2d(1024, 256, kernel_size=(1, 1), stride=(1, 1), scale=0.015085669234395027, zero_point=0)\n",
+       "        (conv2): QuantizedConvReLU2d(256, 256, kernel_size=(3, 3), stride=(1, 1), scale=0.017223244532942772, zero_point=0, padding=(2, 2), dilation=(2, 2))\n",
+       "        (conv3): QuantizedConv2d(256, 1024, kernel_size=(1, 1), stride=(1, 1), scale=0.03333673253655434, zero_point=72)\n",
+       "      )\n",
+       "      (3): Module(\n",
+       "        (conv1): QuantizedConvReLU2d(1024, 256, kernel_size=(1, 1), stride=(1, 1), scale=0.01661784201860428, zero_point=0)\n",
+       "        (conv2): QuantizedConvReLU2d(256, 256, kernel_size=(3, 3), stride=(1, 1), scale=0.015930263325572014, zero_point=0, padding=(2, 2), dilation=(2, 2))\n",
+       "        (conv3): QuantizedConv2d(256, 1024, kernel_size=(1, 1), stride=(1, 1), scale=0.031049128621816635, zero_point=67)\n",
+       "      )\n",
+       "      (4): Module(\n",
+       "        (conv1): QuantizedConvReLU2d(1024, 256, kernel_size=(1, 1), stride=(1, 1), scale=0.01577617973089218, zero_point=0)\n",
+       "        (conv2): QuantizedConvReLU2d(256, 256, kernel_size=(3, 3), stride=(1, 1), scale=0.017381727695465088, zero_point=0, padding=(2, 2), dilation=(2, 2))\n",
+       "        (conv3): QuantizedConv2d(256, 1024, kernel_size=(1, 1), stride=(1, 1), scale=0.03551638126373291, zero_point=66)\n",
+       "      )\n",
+       "      (5): Module(\n",
+       "        (conv1): QuantizedConvReLU2d(1024, 256, kernel_size=(1, 1), stride=(1, 1), scale=0.018939968198537827, zero_point=0)\n",
+       "        (conv2): QuantizedConvReLU2d(256, 256, kernel_size=(3, 3), stride=(1, 1), scale=0.03286631405353546, zero_point=0, padding=(2, 2), dilation=(2, 2))\n",
+       "        (conv3): QuantizedConv2d(256, 1024, kernel_size=(1, 1), stride=(1, 1), scale=0.05447225645184517, zero_point=57)\n",
+       "      )\n",
+       "    )\n",
+       "    (layer4): Module(\n",
+       "      (0): Module(\n",
+       "        (conv1): QuantizedConvReLU2d(1024, 512, kernel_size=(1, 1), stride=(1, 1), scale=0.01836732029914856, zero_point=0)\n",
+       "        (conv2): QuantizedConvReLU2d(512, 512, kernel_size=(3, 3), stride=(1, 1), scale=0.022010765969753265, zero_point=0, padding=(2, 2), dilation=(2, 2))\n",
+       "        (conv3): QuantizedConv2d(512, 2048, kernel_size=(1, 1), stride=(1, 1), scale=0.061783235520124435, zero_point=60)\n",
+       "        (downsample): Module(\n",
+       "          (0): QuantizedConv2d(1024, 2048, kernel_size=(1, 1), stride=(1, 1), scale=0.08385398238897324, zero_point=48)\n",
+       "        )\n",
+       "      )\n",
+       "      (1): Module(\n",
+       "        (conv1): QuantizedConvReLU2d(2048, 512, kernel_size=(1, 1), stride=(1, 1), scale=0.0185911376029253, zero_point=0)\n",
+       "        (conv2): QuantizedConvReLU2d(512, 512, kernel_size=(3, 3), stride=(1, 1), scale=0.023959284648299217, zero_point=0, padding=(4, 4), dilation=(4, 4))\n",
+       "        (conv3): QuantizedConv2d(512, 2048, kernel_size=(1, 1), stride=(1, 1), scale=0.07678955048322678, zero_point=56)\n",
+       "      )\n",
+       "      (2): Module(\n",
+       "        (conv1): QuantizedConvReLU2d(2048, 512, kernel_size=(1, 1), stride=(1, 1), scale=0.02264581061899662, zero_point=0)\n",
+       "        (conv2): QuantizedConvReLU2d(512, 512, kernel_size=(3, 3), stride=(1, 1), scale=0.026512546464800835, zero_point=0, padding=(4, 4), dilation=(4, 4))\n",
+       "        (conv3): QuantizedConv2d(512, 2048, kernel_size=(1, 1), stride=(1, 1), scale=0.13676713407039642, zero_point=59)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (classifier): Module(\n",
+       "    (0): Module(\n",
+       "      (convs): Module(\n",
+       "        (0): Module(\n",
+       "          (0): QuantizedConvReLU2d(2048, 256, kernel_size=(1, 1), stride=(1, 1), scale=0.12193340808153152, zero_point=0)\n",
+       "        )\n",
+       "        (1): Module(\n",
+       "          (0): QuantizedConvReLU2d(2048, 256, kernel_size=(3, 3), stride=(1, 1), scale=0.12193340808153152, zero_point=0, padding=(12, 12), dilation=(12, 12))\n",
+       "        )\n",
+       "        (2): Module(\n",
+       "          (0): QuantizedConvReLU2d(2048, 256, kernel_size=(3, 3), stride=(1, 1), scale=0.12193340808153152, zero_point=0, padding=(24, 24), dilation=(24, 24))\n",
+       "        )\n",
+       "        (3): Module(\n",
+       "          (0): QuantizedConvReLU2d(2048, 256, kernel_size=(3, 3), stride=(1, 1), scale=0.12193340808153152, zero_point=0, padding=(36, 36), dilation=(36, 36))\n",
+       "        )\n",
+       "        (4): Module(\n",
+       "          (0): AdaptiveAvgPool2d(output_size=1)\n",
+       "          (1): QuantizedConvReLU2d(2048, 256, kernel_size=(1, 1), stride=(1, 1), scale=0.05601539462804794, zero_point=0)\n",
+       "        )\n",
+       "      )\n",
+       "      (project): Module(\n",
+       "        (0): QuantizedConvReLU2d(1280, 256, kernel_size=(1, 1), stride=(1, 1), scale=0.06234443187713623, zero_point=0)\n",
+       "        (3): QuantizedDropout(p=0.5, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): QuantizedConvReLU2d(256, 256, kernel_size=(3, 3), stride=(1, 1), scale=0.05684414133429527, zero_point=0, padding=(1, 1))\n",
+       "    (4): QuantizedConv2d(256, 21, kernel_size=(1, 1), stride=(1, 1), scale=0.5338781476020813, zero_point=41)\n",
+       "  )\n",
+       "  (aux_classifier): Module(\n",
+       "    (0): QuantizedConvReLU2d(1024, 256, kernel_size=(3, 3), stride=(1, 1), scale=0.05850644037127495, zero_point=0, padding=(1, 1))\n",
+       "    (3): QuantizedDropout(p=0.1, inplace=False)\n",
+       "    (4): QuantizedConv2d(256, 21, kernel_size=(1, 1), stride=(1, 1), scale=0.32249802350997925, zero_point=49)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 24
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-05T10:22:17.447398Z",
+     "start_time": "2025-03-05T10:22:17.445670Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import speed_up_nn.hw_03.deeplab_quantization_ready.train as train\n",
+    "importlib.reload(train)\n",
+    "from speed_up_nn.hw_03.deeplab_quantization_ready.train import train_one_epoch_distill\n",
+    "epochs = 3\n",
+    "for epoch in range(epochs):\n",
+    "    train_one_epoch_distill(\n",
+    "        teacher_model=model.cuda(),\n",
+    "        student_model=int_qat_model.cuda(),\n",
+    "        optimizer=optimizer,\n",
+    "        data_loader=subset,\n",
+    "        device=device,\n",
+    "        epoch=epoch,\n",
+    "        print_freq=print_freq,\n",
+    "        scaler=scaler\n",
+    "    )\n"
+   ],
+   "id": "f5a11d02bfe94721",
    "outputs": [],
-   "source": ""
+   "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "confmat = evaluate(int_qat_model.cpu(), subset, device='cpu', num_classes=num_classes)\n",
+    "print(confmat)"
+   ],
+   "id": "da5ff60a0bdfd59d"
   }
  ],
  "metadata": {
